# trac-rpc-client

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
src/trac_rpc/: __init__.py  client.py  exceptions.py  models.py  validators.py
tests/: conftest.py  test_client.py  test_integration.py  test_methods.py  test_models.py  test_validators.py  utils.py
tests/fixtures/: trac-get-all-components-response.json  trac-get-all-milestones-response.json  trac-get-all-priorities-response.json  trac-get-all-resolutions-response.json  trac-get-all-severities-response.json  trac-get-all-statuses-response.json  trac-get-all-types-response.json  trac-get-all-versions-response.json  trac-get-all-wiki-pages-response.json  trac-get-api-version-request.json  trac-get-api-version-response.json  trac-get-milestone-response.json  trac-get-ticket-attachments-response.json  trac-get-ticket-changelog-response.json  trac-get-ticket-response.json  trac-response-rpc-error.json
